-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.15.7
-
3
-
9223372036854775807
ofd access logs are not enabled by default; they are enabled by setting the size of the circular buffer they require.
Someone unfamiliar with ofd access logs and the reader may not know this.
State how to enable the logs in the usage message of ofd_access_log_reader, and in the comment of the source file implementing them, so users need not spelunk through code to learn how.